# DirecXPrac

./: CMakeLists.txt  README.md  main.cpp  todos.txt
include/: Platform.h
include/dx10/: D3DX10.h
include/dx11/: D3D11.h  D3DX11.h  D3DX11async.h  D3DX11core.h  D3DX11tex.h
include/libs/dx10/: D3D10.h  D3DX10.h  D3DX10math.inl  D3DX10tex.h
include/render/: D3D11DynamicRHI.h
source/: main.cpp
source/render/: D3D11Commands.cpp
